fix: avoid overlap of the stripe accounts action

--- a/assets/src/css/admin/stripe-admin.scss
+++ b/assets/src/css/admin/stripe-admin.scss
@@ -259,7 +259,7 @@ a.give-stripe-connect-temp-dismiss:active {
 
 				.give-stripe-account-actions {
 					float: right;
-					width: 28%;
+					width: 30%;
 
 					span {
 						margin: 0 10px;
